# Modulo_1

./: .gitignore  BasicSintaxis.py  Modulo_1.ipynb  README.md  comandos_sistema.py  comentarios.py  input_output.py  operadores_aritmeticos.py  operadores_asignacion.py  operadores_identidad.py  operadores_logicos.py  precedencia_operadores.py  print_options.py  pyproject.toml  scripts.py  tipo_datos.py
